<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Golden Audiobook</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="random_audiobooks">Random Audiobooks</string>
    <string name="search">Search</string>
    <string name="book_cover">Book Cover</string>
    <string name="loading">Loading...</string>
    <string name="error_loading">Error loading data</string>
    <string name="retry">Retry</string>
    <string name="no_audiobooks_found">No audiobooks found</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="track">Track</string>
    <string name="tracks">Tracks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="all_categories">All Categories</string>
    <string name="homepage">Home</string>
    <string name="bestsellers">Bestsellers</string>
    <string name="popup_esito_image_description">Esito</string>
    <string name="notification_channel_name">Audiobook Playback</string>
    <string name="notification_channel_description">Controls for audiobook playback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_books_by_author">All books by author</string>
    <string name="splash_tagline">Premium Audio Experience</string>
</resources>
