<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.goldenaudiobook.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.goldenaudiobook.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.goldenaudiobook.ui.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/categoryAudiobooksFragment"
        android:name="com.example.goldenaudiobook.ui.CategoryAudiobooksFragment"
        android:label="{categoryName}"
        tools:layout="@layout/fragment_category_audiobooks">

        <argument
            android:name="categoryUrl"
            app:argType="string" />

        <argument
            android:name="categoryName"
            android:defaultValue="Category"
            app:argType="string" />


    </fragment>


    <fragment
        android:id="@+id/authorAllBooksFragment"
        android:name="com.example.goldenaudiobook.ui.AuthorAllBooksFragment"
        android:label="{authorName}"
        tools:layout="@layout/fragment_author_all_books">

        <argument
            android:name="authorUrl"
            app:argType="string" />

        <argument
            android:name="authorName"
            android:defaultValue="Author"
            app:argType="string" />

    </fragment>


</navigation>
